--- a/HTML/templates/company-sign-in.html
+++ b/HTML/templates/company-sign-in.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="This is the sign-in main content">
   <title>Sign-in Page</title>
-  <link rel="stylesheet" href="../../CSS/sign-style.css">
+  <link rel="stylesheet" href="../../CSS/sign-form-style.css">
 </head>
 <body>
 <main>
