--- a/HTML/templates/profileVacant.html
+++ b/HTML/templates/profileVacant.html
@@ -10,44 +10,46 @@
 <main>
   <section  class="name-page"> <h4>My Profile</h4> </section>
   <section  class="dashboard">
+
     <section  class="user-information" >
       <img class="user-image"></img>
       <section><h1>Lorem ipsum</h1><h6>lore ipsum</h6></section>
     </section>
-    <section style="margin-top:20px; ">
-      <button class="button-save">Save profile</button>
+
+    <section>
+      <button style="background-color: white;color:#1d4f9a;border-color:#CCCCF5;margin-top: 20px;margin-right: 100px;width: 80px;height: 40px; ">Apply now</button>
     </section>
   </section>
 
   <article class="article-edition">
     <section>
-
       <h4 style="color:#25324B;">About me</h4>
-      <textarea class="text-user" maxlength="1905" rows="30" cols="80">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+      <textarea class="text-user" readonly maxlength="1905" rows="30" cols="80">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
         Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
         Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa.</textarea>
-      <section style="border-style: none;" >
-        <h4 >Portfolio</h4>
-        <input type="text" name=""  class="portfolio">
+
+
+    </section>
+
+    <section class="info-job">
+      <section>
+         <h4 style="display: inline;">About this job</h4>
       </section>
-
+      <section>
+        <h5 style="display: inline">Apply Before  </h5><input type="text" value="01/01/2000"  readonly class="contact-method">
+      </section>
+      <section>
+        <h5 style="display: inline">Job posted On  </h5><input type="text" value="01/01/2000"  readonly class="contact-method">
+      </section>
+      <section>
+        <h5 style="display: inline">Job Type  </h5><input type="text" value="lorem ipsum"  readonly class="contact-method">
+      </section>
+      <section>
+        <h5 style="display: inline">Salary   </h5><input type="text" value="0$ - 100k$ EUR"  readonly class="contact-method">
+      </section>
     </section>
-
-    <section class="contact-information">
-      <h4>Contact Information</h4>
-      <h5>Contact Method</h5>
-      <input type="text" name="lore ipsum" class="contact-method">
-      <h5>Contact Method</h5>
-      <input type="text" name="lore ipsum"  class="contact-method">
-      <h5>Contact Method</h5>
-      <input type="text" name="lore ipsum"  class="contact-method">
-      <h5>Contact Method</h5>
-      <input type="text" name="lore ipsum"  class="contact-method">
-    </section>
-
   </article>
-
 
 </main>
 </body>
