Corregidas referencias a páginas de estilo

--- a/HTML/templates/footer.html
+++ b/HTML/templates/footer.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="This is the footer for most pages.">
     <title>Footer</title>
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="/CSS/footer.css">
 </head>
 <body>
 <section id="footer">
