--- a/HTML/templates/main-page.html
+++ b/HTML/templates/main-page.html
@@ -2,8 +2,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="This is the landing page for the app.">
     <title>JobTray</title>
-    <link rel="stylesheet" href="main-page-style.css">
+    <link rel="stylesheet" href="/CSS/main-page-style.css">
 </head>
 <body>
 
@@ -14,7 +15,7 @@
     </div>
 </section>
 <div id="content">
-    <img src="images/asps.png" alt="placeholder" width="100%" height="100%">
+    <img src="/images/asps.png" alt="placeholder" width="100%" height="100%">
 </div>
 
 </body>
