--- a/HTML/templates/company-header.html
+++ b/HTML/templates/company-header.html
@@ -6,24 +6,27 @@
     <link rel="stylesheet" href="/CSS/company-profile-style.css">
     <link rel="stylesheet" href="/CSS/headers.css">
 </head>
-<body>
+<body style="margin: 0;">
 <header id="company-header">
-    <section style="display: inline">
-        <svg style="display: inline-block">
-            <rect x="10" y="20" fill="white" width="80%" height="50%" ></rect>
-            <text x="35%" y="40%" fill="black" >
-                LOGO
-            </text>
-        </svg>
+    <section style="display: inline;">
+        <section style="display: inline;">
+            <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+        </section>
     </section>
-    <section style="display: inline-block;">
+
+    <section style="display: inline">
         <section  class="company-buttons-container">
             <button class="company-buttons">Job Listing</button>
             <button class="company-buttons">Post a job</button>
-            <img id="img"><button class="company-buttons-profile">
-                                  <b style="color:white;">Name</b>
-                                  <br>email@example.com</button>
-            </img>
+            <section style="display: flex inline;gap:5px;">
+                <img id="imgCompany"><button class="company-buttons-profile">
+                <b style="color:white;">Name</b>
+                <br>email@example.com</button>
+                </img>
+            </section>
+
+
+
         </section>
 
     </section>
