--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -6,35 +6,33 @@
   <link rel="stylesheet" href="/CSS/headers.css">
   <link rel="stylesheet" href="/CSS/job-seeker-profile-style.css">
 </head>
-<body>
-<header id="job-seeker-header">
-  <section style="display: inline">
-    <svg style="display: inline-block">
-      <rect x="10" y="20" fill="white" width="80%" height="50%" ></rect>
-      <text x="35%" y="40%" fill="black" >
-        LOGO
-      </text>
-
-    </svg>
+<body style="margin: 0;">
+<header id="job-seeker-header" >
+  <section style="display: inline;">
+    <section style="display: inline;">
+      <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+    </section>
   </section>
   <section style="display: inline-block;">
+
     <section class="job-seeker-buttons-section">
-      <section style="margin-right: 50px">
+      <section style="display: inline-block;margin-right: 20px;">
         <button class="job-seeker-find-jobs-button" >Find a job</button>
       </section>
+      <section style="display: flex inline;gap:1px;margin-right: 20px;">
+        <img id="imgJobSeeker"><button class="job-seeker-profile-button">
+        <b style="color:white;">Name</b>
+        <br>email@example.com</button>
+        </img>
+      </section>
 
-      <img id="img">  <button class="job-seeker-profile-button">
-                      <b style="color:white;">Name</b><br>email@example.com
-                      </button>
-      </img>
+
     </section>
 
   </section>
 </header>
 <main>
-  <section>
-    <p>hoña mundo</p>
-  </section>
+
 </main>
 </body>
 </html>
