--- a/HTML/templates/profile.html
+++ b/HTML/templates/profile.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <title>profile</title>
   <link rel="stylesheet" href="/CSS/profiles-style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <main>
   <section  class="name-page"> <h4>My Profile</h4> </section>
-  <section  class="dashboard">
+  <section  class="dashboardNew">
     <section  class="user-information" >
       <img class="user-image"></img>
       <section><h1>Lorem ipsum</h1><h6>lore ipsum</h6></section>
     </section>
-    <section style="margin-top:20px; ">
+    <section style="margin-top:20px;margin-right: 20px; ">
       <button class="button-save">Save profile</button>
     </section>
   </section>
