--- a/CSS/company-profile-style.css
+++ b/CSS/company-profile-style.css
@@ -1,5 +1,4 @@
-
-#img {
+#imgCompany {
     border-radius: 75%;
     width: 40px;
     height: 40px;
@@ -12,19 +11,24 @@
 .company-buttons-container{
     display: flex inline;
     justify-content: space-around;
-    align-items: center;
     margin-top:20px;
-    gap:10px;
+    gap:20px;
 }
 
 .company-buttons{
     color:#1d4f9a;
     background-color: white;
     border-style: none;
-    height:40px;
-    width: 80px;
+    height: 40px;
+    width:  100px;
+    border-radius:4px;
+    text-align:center;
 }
 
 .company-buttons-profile{
-    text-align:left;background-color: #1d4f9a;border-style: none;color:gray;
+    text-align:left;
+    background-color: #1d4f9a;
+    border-style: none;
+    color:gray;
+    margin-right:20px;
 }
