--- a/CSS/profiles-style.css
+++ b/CSS/profiles-style.css
@@ -1,5 +1,4 @@
 
-
 .name-page{
     color:#25324B;
     border-style: none;
@@ -11,6 +10,16 @@
     display: flex;
     justify-content:center;
     gap:1200px;
+}
+.dashboardView{
+    border-style:solid;
+    border-color:#E6E6E6;
+    display: flex;
+    justify-content:flex-start;
+    gap:1200px;
+}
+.dashboardNew{
+    display:flex; justify-content:space-between;width:100%;margin:auto;flex-wrap:wrap;
 }
 .user-information{
     display: flex;
@@ -32,12 +41,12 @@
     background-color: white;
     padding-bottom: 10px;
     padding-left: 10px;
-    text-align: left;
+    text-align: center;
     border-radius: 5px;
 }
 
 .article-edition{
-    display:flex;justify-content: flex-start;gap:150px
+    display:flex;justify-content: flex-start;gap:40px;
 }
 
 .contact-method{
@@ -46,6 +55,14 @@
 .contact-information{
     border-style: none;
     height:400px;
+    width:10px;
+}
+
+.info-job{
+    display:flex;
+    flex-direction:column;
+    gap:20px;
+    margin-top:20px;
 }
 .portfolio{
     padding-right: 50%;
@@ -63,8 +80,8 @@
     display: flex inline;
     justify-content: space-around;
     align-items: flex-end;
-    margin-top:20px;
-    gap:10px;
+
+
 }
 .job-seeker-find-jobs-button{
     color:#1d4f9a;
@@ -72,10 +89,31 @@
     border-style: none;
     height:40px;
     width: 80px;
+
 }
 .job-seeker-profile-button{
     text-align:left;
     background-color: #1d4f9a;
     border-style: none;
     color:gray;
+
+}
+
+.imageVacantProfile{
+    width: 30px;
+    border-radius: 100%;
+    object-fit: cover;
+    border-style: solid;
+    margin-left:10px;
+}
+.dashboardNew{
+    display:flex; justify-content:space-between;width:50%;margin:0;flex-wrap:wrap; border-style:solid;
+    border-color:#E6E6E6;
+}
+.buttonsVacantsection{
+    display:flex; justify-content:flex-end;
+}
+.ApplyNowVacant{
+    background-color: white;color:#1d4f9a;border-color:#CCCCF5;width: 100px;height: 35px;border-radius: 4px;
+    margin-top: 10px;margin-right: 10px;text-align: right;
 }
