--- a/HTML/templates/login-and-signup-header.html
+++ b/HTML/templates/login-and-signup-header.html
@@ -5,15 +5,12 @@
     <title>login-and-sign-up</title>
     <link rel="stylesheet" href="/CSS/headers.css">
 </head>
-<body>
+<body style="margin: 0;">
 <header id="login-and-signup-header">
-    <section style="display: inline">
-        <svg style="display: inline-block">
-            <rect x="10" y="20" fill="white" width="80%" height="50%" ></rect>
-            <text x="35%" y="40%" fill="black" >
-                LOGO
-            </text>
-        </svg>
+    <section style="display: inline;">
+        <section style="display: inline;">
+            <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+        </section>
     </section>
 
 
