--- a/HTML/templates/main-page.html
+++ b/HTML/templates/main-page.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="This is the landing page for the app.">
-    <title>JobTray</title>
-    <link rel="stylesheet" href="/CSS/main-page-style.css">
+    <title>main-page</title>
+    <link rel="stylesheet" href="/CSS/headers.css">
+    <link rel="stylesheet" href="/CSS/main-page.css">
 </head>
-<body>
+<body style="margin: 0 ;">
+<header id="main-header">
+    <section style="display: inline;">
+        <section style="display: inline;">
+            <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+        </section>
+    </section>
+    <section style="display: inline-block;">
+        <section class="buttons-main-page-section">
+            <button class="buttons-main-page">Login</button>
+            <button class="buttons-main-page"> Sign Up</button>
+        </section>
+    </section>
 
-<section id="top">
-    <h1>Lorem Ipsum!</h1>
-    <div id="container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-</section>
-<div id="content">
-    <img src="/images/asps.png" alt="placeholder" width="100%" height="100%">
-</div>
-
+</header>
 </body>
 </html>
