--- a/HTML/templates/profileVacant.html
+++ b/HTML/templates/profileVacant.html
@@ -4,49 +4,48 @@
   <meta charset="UTF-8">
   <title>profile</title>
   <link rel="stylesheet" href="/CSS/profiles-style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <main>
-  <section  class="name-page"> <h4>My Profile</h4> </section>
-  <section  class="dashboard">
 
-    <section  class="user-information" >
-      <img class="user-image"></img>
-      <section><h1>Lorem ipsum</h1><h6>lore ipsum</h6></section>
+
+  <section class="dashboardNew" >
+    <section style="display:flex; align-items: center;gap: 10px;">
+      <img src="/images/asps.png" class="imageVacantProfile"></img>
+      <h1>Lore ipsum</h1>
+    </section>
+    <section class="buttonsVacantsection" >
+      <button class="ApplyNowVacant"><b>Apply now</b></button>
     </section>
 
-    <section>
-      <button style="background-color: white;color:#1d4f9a;border-color:#CCCCF5;margin-top: 20px;margin-right: 100px;width: 80px;height: 40px; ">Apply now</button>
-    </section>
   </section>
 
   <article class="article-edition">
+
     <section>
-      <h4 style="color:#25324B;">About me</h4>
+      <br>
       <textarea class="text-user" readonly maxlength="1905" rows="30" cols="80">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
         Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
         Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa.</textarea>
-
-
     </section>
 
     <section class="info-job">
       <section>
-         <h4 style="display: inline;">About this job</h4>
+        <h4 style="display: inline;">About this job</h4>
       </section>
       <section>
-        <h5 style="display: inline">Apply Before  </h5><input type="text" value="01/01/2000"  readonly class="contact-method">
+        <h5 style="display: inline">Apply Before  </h5> <input type="text" value="01/01/2000"  readonly class="contact-method">
       </section>
       <section>
-        <h5 style="display: inline">Job posted On  </h5><input type="text" value="01/01/2000"  readonly class="contact-method">
+        <h5 style="display: inline">Job posted On  </h5> <input type="text" value="01/01/2000"  readonly class="contact-method">
       </section>
       <section>
-        <h5 style="display: inline">Job Type  </h5><input type="text" value="lorem ipsum"  readonly class="contact-method">
+        <h5 style="display: inline">Job Type  </h5> <input type="text" value="lorem ipsum"  readonly class="contact-method">
       </section>
       <section>
-        <h5 style="display: inline">Salary   </h5><input type="text" value="0$ - 100k$ EUR"  readonly class="contact-method">
+        <h5 style="display: inline">Salary   </h5> <input type="text" value="0$ - 100k$ EUR"  readonly class="contact-method">
       </section>
     </section>
   </article>
