--- a/HTML/templates/job-seeker-find-jobs-list.html
+++ b/HTML/templates/job-seeker-find-jobs-list.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find jobs list</title>
-    <link rel="stylesheet" href="../../CSS/job-seeker-list-styles.css">
-</head>
-<body>
-
-<section class="navigation-bar">
-    <label for="search-bar"></label><input type="text" placeholder="Search for jobs..." id="search-bar">
-    <button id="search-btn">Search</button>
-</section>
-
-<main>
-    <aside>
+<section class="list-container">
+    <aside class="filter-aside">
         <fieldset>
             <legend>Salary Range</legend>
             <label for="salary-1"><input type="checkbox" name="salary-range" id="salary-1" checked> $700 - $1000 (4)</label>
@@ -71,7 +56,4 @@
             <button id="see-more">See more...</button>
         </div>
     </section>
-</main>
-
-</body>
-</html>
+</section>
