--- a/CSS/company-list-styles.css
+++ b/CSS/company-list-styles.css
@@ -1,41 +1,34 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Ebrima, sans-serif;
-}
-
-body {
-    background-color: #f5f5f5;
+.list-container {
     padding: 1vh;
+    min-height: 80vh;
 }
 
-table {
+.list-container table {
     width: 100%;
     border-collapse: collapse;
     background: white;
 }
 
-thead {
+.list-container thead {
     background: #f8f9fa;
     border: 1px solid #ccc;
 }
 
-tbody {
+.list-container tbody {
     border: 1px solid #ccc;
 }
 
-th, td {
+.list-container th, td {
     padding: 12px;
     text-align: center;
     border: none;
 }
 
-th{
+.list-container th{
     color: #7C8493;
 }
 
-td {
+.list-container td {
     color: #25324B;
     font-weight: bold;
 }
@@ -55,7 +48,7 @@ td {
     font-weight: bold;
 }
 
-td img {
+.list-container td img {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -83,7 +76,7 @@ td img {
     border: 2px solid #3360A4;
 }
 
-td button {
+.list-container td button {
     color: #3360A4;
     cursor: pointer;
     font-weight: bold;
@@ -102,10 +95,4 @@ td button {
     background: transparent;
     padding: 6px 12px;
     font-size: 14px;
-}
-
-@media (max-width: 768px) {
-    td {
-        padding: 8px;
-    }
 }
