--- a/CSS/main-page-style.css
+++ b/CSS/main-page-style.css
@@ -2,28 +2,20 @@
 Enter WP Design & Creation Comments Here
 
 */
-
-/*////////// GENERAL //////////*/
-body {
-    margin: 0;
-    padding: 0;
-    background: #f5f5f5;
-    text-align: left;
-}
-
-
-
-
 /*////////// TYPEOGRAPHY //////////*/
 
-h1 {
+.main-page-main {
+    height: 80vh;
+}
+
+.main-page-main h1 {
     font-weight: bold;
     font-size: 40px;
     color: #001338;
 }
 
 
-p {
+#top p {
     color: #515B6f;
 }
 
@@ -41,7 +33,6 @@ p {
     justify-content: center;
     display: flex;
     ;
-
 }
 /*///////// SECTION //////////*/
 #top {
@@ -58,4 +49,9 @@ p {
     flex-direction: column;
     justify-content: center;
     max-width: 40%;
+}
+
+.placeholder {
+    width: 100%;
+    height: 100%;
 }
