--- a/HTML/templates/company-vacancy-list.html
+++ b/HTML/templates/company-vacancy-list.html
@@ -1,32 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="This is the sign-in main content">
-    <title>Vacancy list</title>
-    <link rel="stylesheet" href="../../CSS/company-list-styles.css">
-  </head>
-  <body>
-    <main class="container">
-      <table>
-        <thead>
-          <tr>
-            <th class="clickable-th">Full Name<span class="sort-icon"><></span></th>
-            <th class="clickable-th">Hiring Stage<span class="sort-icon"><></span></th>
-            <th class="clickable-th">Applied Date<span class="sort-icon"><></span></th>
-            <th></th>
-          </tr>
-        </thead>
+<section class="list-container">
+  <table>
+    <thead>
+      <tr>
+        <th class="clickable-th">Full Name<span class="sort-icon"><></span></th>
+        <th class="clickable-th">Hiring Stage<span class="sort-icon"><></span></th>
+        <th class="clickable-th">Applied Date<span class="sort-icon"><></span></th>
+        <th></th>
+      </tr>
+    </thead>
 
-        <tbody>
-          <tr>
-            <td><img src="../../images/asps.png" alt="Placeholder X">Vacancy Name</td>
-            <td><span class="status-tag" id="stage">Stage</span></td>
-            <td>01/01/2000</td>
-            <td><button class="see-profiles">See Profiles</button><button class="more-options">···</button></td>
-          </tr>
-        </tbody>
-      </table>
-    </main>
-  </body>
-</html>
+    <tbody>
+      <tr>
+        <td><img src="../../images/asps.png" alt="Placeholder X">Vacancy Name</td>
+        <td><span class="status-tag" id="stage">Stage</span></td>
+        <td>01/01/2000</td>
+        <td><button class="see-profiles">See Profiles</button><button class="more-options">···</button></td>
+      </tr>
+    </tbody>
+  </table>
+</section>
