--- a/HTML/templates/main-page-header.html
+++ b/HTML/templates/main-page-header.html
@@ -2,27 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>main-page</title>
-  <link rel="stylesheet" href="/CSS/headers.css">
+  <title>company-header</title>
+  <link rel="stylesheet" href="/CSS/company-profile-style.css">
   <link rel="stylesheet" href="/CSS/main-page.css">
+  <link rel="stylesheet" href="/CSS/headers.css">
 </head>
-<body>
-<header id="main-header">
-  <section style="display: inline">
-    <svg style="display: inline-block">
-      <rect x="10" y="20" fill="white" width="80%" height="50%" ></rect>
-      <text x="35%" y="40%" fill="black" >
-        LOGO
-      </text>
-    </svg>
-  </section>
-  <section style="display: inline-block;">
-    <section class="buttons-main-page-section">
-      <button class="buttons-main-page">Login</button>
-      <button class="buttons-main-page"> Sign Up</button>
-    </section>
-  </section>
-
-</header>
+<body style="margin: 0;">
+        <header id="main-header">
+          <section style="display: inline;">
+            <section style="display: inline;">
+              <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+            </section>
+          </section>
+          <section style="display: inline-block;">
+            <section class="buttons-main-page-section">
+              <button class="buttons-main-page">Login</button>
+              <button class="buttons-main-page"> Sign Up</button>
+            </section>
+          </section>
+        </header>
 </body>
 </html>
