Edit templates and views and style pages

--- a/CSS/profiles-style.css
+++ b/CSS/profiles-style.css
@@ -3,6 +3,15 @@
     border-style: none;
 }
 
+.user-dashboard{
+    display: flex ;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    border:1px solid black;
+    margin-left: 50px;
+    margin-right: 50px;
+}
 .dashboard{
     border-style:solid;
     border-color:#E6E6E6;
@@ -25,7 +34,17 @@
     justify-content:flex-start;
     gap:20px;
 }
+.user-image-dashboard{
+    display:flex inline;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+}
 
+#about-me{
+    display: flex ;
+    margin-left: 50px;
+}
 .user-image{
     border-radius: 100%;
     width: 80px;
@@ -51,11 +70,7 @@
 .contact-method{
     border-style:none;
 }
-.contact-information{
-    border-style: none;
-    height:400px;
-    width:10px;
-}
+
 
 .info-job{
     display:flex;
@@ -115,4 +130,22 @@
 .ApplyNowVacant{
     background-color: white;color:#1d4f9a;border-color:#CCCCF5;width: 100px;height: 35px;border-radius: 4px;
     margin-top: 10px;margin-right: 10px;text-align: right;
+}
+.dashboard-profile{
+    display: flex block; justify-content: center;
+}
+.edit-zone{
+    display: flex ; justify-content: space-between;
+}
+.text-area{
+    display:flex inline; margin-left: 50px;
+}
+.contact-information{
+    display: flex inline;flex-direction:column;margin-right: 50px;gap:5px;
+}
+.apply-job {
+    display: flex inline;flex-direction:column;gap: 10px;margin-right: 50px;
+}
+.section-apply-job {
+    display: flex;justify-content: space-between;align-items: center;
 }
