--- a/HTML/views/find-jobs-job-seeker.html
+++ b/HTML/views/find-jobs-job-seeker.html
@@ -13,10 +13,14 @@
     <link rel="stylesheet" href="/CSS/job-seeker-list-style.css">
     <link rel="stylesheet" href="/CSS/search-bar-style.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+    <link rel="stylesheet" href="/CSS/job-seeker-profile-style.css">
+    <link rel="stylesheet" href="/CSS/profiles-style.css">
+
+
 </head>
 <body>
     <div id="wrapper">
-        <header id="sign_header" xlu-include-file="/HTML/templates/company-header.html">
+        <header id="sign_header" xlu-include-file="/HTML/templates/job-seeker-header.html">
         </header>
 
         <section id="main-tittle" xlu-include-file="/HTML/templates/main-tittle.html">
