--- a/HTML/views/vacancy-applicants-list-company.html
+++ b/HTML/views/vacancy-applicants-list-company.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/CSS/vacancy-toggle-nav-style.css">
     <link rel="stylesheet" href="/CSS/company-list-styles.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+    <link rel="stylesheet" href="/CSS/company-profile-style.css">
+    <link rel="stylesheet" href="/CSS/headers.css">
 </head>
 <body>
     <div id="wrapper">
