--- a/HTML/templates/profileView.html
+++ b/HTML/templates/profileView.html
@@ -4,46 +4,74 @@
   <meta charset="UTF-8">
   <title>profile</title>
   <link rel="stylesheet" href="/CSS/profiles-style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <main>
-  <section  class="name-page"> <h4>My Profile</h4> </section>
-  <section  class="dashboardView">
-    <section  class="user-information" >
-      <img class="user-image"></img>
-      <section><h1>Lorem ipsum</h1><h6>lore ipsum</h6></section>
+  <br><br><br><br>
+  <section class="dashboard-profile" >
+    <section class="user-dashboard" >
+      <section  class="user-image-dashboard" >
+        <img src="/images/asps.png" class="user-image"></img>
+        <h1>Lore ipsum</h1>
+      </section>
+      <section>
+        <button class="ApplyNowVacant"><b>Edit profile</b></button>
+      </section>
     </section>
 
   </section>
+  <section id="about-me" >
+    <h3>About me</h3>
+  </section>
 
-  <article class="article-edition">
-    <section>
-      <h4 style="color:#25324B;">About me</h4>
-      <textarea class="text-user" readonly maxlength="1905" rows="30" cols="80">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+  <section class="edit-zone">
+    <section class="text-area">
+      <section>
+        <textarea  class="text-user"   readonly maxlength="1905" rows="50" cols="150">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
         Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa.</textarea>
-      <section style="border-style: none;" >
-        <h4 >Portfolio</h4>
-        <input type="text" name=""  class="portfolio">
+        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa.
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa
+       </textarea>
+        <h3>Portfolio</h3>
+        <textarea  readonly class="text-user"   rows="10" cols="90">
+       </textarea>
       </section>
 
     </section>
+    <section class="contact-information" >
+      <section style="text-align: left" >
+        <h3 style="display: inline;">Contact  Information</h3>
+      </section>
+      <section style="text-align: center;" >
+        <h4 style="margin: 0;">Contact  method</h4>
+        <input type="text" value="         lore ipsum"  class="contact-method">
+      </section>
+      <section style="text-align: center;" >
+        <h4 style="margin: 0;">Contact  method</h4>
+        <input type="text" value="         lore ipsum"  class="contact-method">
+      </section>
+      <section style="text-align: center;" >
+        <h4 style="margin: 0;">Contact  method</h4>
+        <input type="text" value="         lore ipsum"  class="contact-method">
+      </section>
+      <section style="text-align: center;" >
+        <h4 style="margin: 0;">Contact  method</h4>
+        <input type="text" value="         lore ipsum"  class="contact-method">
+      </section>
 
-    <section class="contact-information">
-      <h4>Contact Information</h4>
-      <h5>Contact Method</h5>
-      <input type="text" name="lore ipsum" class="contact-method">
-      <h5>Contact Method</h5>
-      <input type="text" name="lore ipsum"  class="contact-method">
-      <h5>Contact Method</h5>
-      <input type="text" name="lore ipsum"  class="contact-method">
-      <h5>Contact Method</h5>
-      <input type="text" name="lore ipsum"  class="contact-method">
+
     </section>
 
-  </article>
+  </section>
 
 
 </main>
