--- a/HTML/views/index.html
+++ b/HTML/views/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="/CSS/headers.css">
     <link rel="stylesheet" href="/CSS/main-page-style.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+    <link rel="stylesheet" href="/CSS/company-profile-style.css">
+    <link rel="stylesheet" href="/CSS/main-page.css">
+    <link rel="stylesheet" href="/CSS/headers.css">
 </head>
 <body>
     <div id="wrapper">
