--- a/HTML/views/job-listing-company.html
+++ b/HTML/views/job-listing-company.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="/CSS/headers.css">
     <link rel="stylesheet" href="/CSS/company-list-styles.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+    <link rel="stylesheet" href="/CSS/profiles-style.css">
+    <link rel="stylesheet" href="/CSS/search-bar-style.css">
+    <link rel="stylesheet" href="/CSS/company-profile-style.css">
+
 </head>
 <body>
     <div id="wrapper">
