--- a/HTML/views/vacancy-profile-company.html
+++ b/HTML/views/vacancy-profile-company.html
@@ -9,10 +9,11 @@
     <script src="/JS/xlu-include-file.js"></script>
 
     <link rel="stylesheet" href="/CSS/general-style.css">
-    <link rel="stylesheet" href="/CSS/headers.css">
     <link rel="stylesheet" href="/CSS/vacancy-toggle-nav-style.css">
     <link rel="stylesheet" href="/CSS/company-list-styles.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+    <link rel="stylesheet" href="/CSS/company-profile-style.css">
+    <link rel="stylesheet" href="/CSS/headers.css">
 </head>
 <body>
     <div id="wrapper">
