--- a/HTML/templates/company-header.html
+++ b/HTML/templates/company-header.html
@@ -1,36 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>company-header</title>
-    <link rel="stylesheet" href="/CSS/company-profile-style.css">
-    <link rel="stylesheet" href="/CSS/headers.css">
-</head>
-<body style="margin: 0;">
 <header id="company-header">
-    <section style="display: inline;">
-        <section style="display: inline;">
-            <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+    <section class="display-section">
+        <section  class="display-section">
+            <img src="/images/asps.png" class="login-section">
         </section>
     </section>
-
-    <section style="display: inline">
+    <section class="display-section">
         <section  class="company-buttons-container">
             <button class="company-buttons">Job Listing</button>
             <button class="company-buttons">Post a job</button>
-            <section style="display: flex inline;gap:5px;">
+            <section class="buttons-section-header">
                 <img id="imgCompany"><button class="company-buttons-profile">
-                <b style="color:white;">Name</b>
+                <b  class="color-name">Name</b>
                 <br>email@example.com</button>
                 </img>
             </section>
-
-
-
         </section>
-
     </section>
-
 </header>
-</body>
-</html>
