--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -1,38 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>job-seeker-header</title>
-  <link rel="stylesheet" href="/CSS/headers.css">
-  <link rel="stylesheet" href="/CSS/job-seeker-profile-style.css">
-</head>
-<body style="margin: 0;">
 <header id="job-seeker-header" >
-  <section style="display: inline;">
-    <section style="display: inline;">
-      <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+  <section class="display-section">
+    <section  class="display-section">
+      <img src="/images/asps.png" class="login-section">
     </section>
   </section>
-  <section style="display: inline-block;">
 
     <section class="job-seeker-buttons-section">
-      <section style="display: inline-block;margin-right: 20px;">
+      <section class="job-seeker-find-jobs-button-section">
         <button class="job-seeker-find-jobs-button" >Find a job</button>
       </section>
-      <section style="display: flex inline;gap:1px;margin-right: 20px;">
+      <section class="section-button-job-seeker-button">
         <img id="imgJobSeeker"><button class="job-seeker-profile-button">
-        <b style="color:white;">Name</b>
+        <b class="color-name">Name</b>
         <br>email@example.com</button>
         </img>
       </section>
-
-
     </section>
-
   </section>
 </header>
-<main>
-
-</main>
-</body>
-</html>
