--- a/HTML/templates/sign-header.html
+++ b/HTML/templates/sign-header.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>login-and-sign-up</title>
-    <link rel="stylesheet" href="/CSS/headers.css">
-</head>
-<body style="margin: 0;">
+
+
 <header id="login-and-signup-header">
-    <section style="display: inline;">
-        <section style="display: inline;">
-            <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+    <section class="display-section">
+        <section  class="display-section">
+            <img src="/images/asps.png" class="login-section">
         </section>
     </section>
 
 
 </header>
-</body>
-</html>
