--- a/HTML/views/company-profile-company.html
+++ b/HTML/views/company-profile-company.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/CSS/job-seeker-list-style.css">
     <link rel="stylesheet" href="/CSS/search-bar-style.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+    <link rel="stylesheet" href="/CSS/headers.css">
+    <link rel="stylesheet" href="/CSS/profiles-style.css">
 </head>
 <body>
     <div id="wrapper">
