--- a/HTML/views/job-seeker-profile-job-seeker.html
+++ b/HTML/views/job-seeker-profile-job-seeker.html
@@ -7,12 +7,12 @@
 
     <title>Sign page</title>
     <script src="/JS/xlu-include-file.js"></script>
-
     <link rel="stylesheet" href="/CSS/general-style.css">
     <link rel="stylesheet" href="/CSS/headers.css">
     <link rel="stylesheet" href="/CSS/job-seeker-list-style.css">
     <link rel="stylesheet" href="/CSS/search-bar-style.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+    <link rel="stylesheet" href="/CSS/profiles-style.css">
 </head>
 <body>
     <div id="wrapper">
