--- a/HTML/templates/main-page-header.html
+++ b/HTML/templates/main-page-header.html
@@ -1,25 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>company-header</title>
-  <link rel="stylesheet" href="/CSS/company-profile-style.css">
-  <link rel="stylesheet" href="/CSS/main-page.css">
-  <link rel="stylesheet" href="/CSS/headers.css">
-</head>
-<body style="margin: 0;">
-        <header id="main-header">
-          <section style="display: inline;">
-            <section style="display: inline;">
-              <img src="/images/asps.png" style="background-color: white;border-color: white;width: 200px;height:40px;margin-top: 20px;margin-bottom: 10px;margin-left: 20px;">
+ <header id="main-header">
+          <section class="display-section">
+            <section  class="display-section">
+              <img src="/images/asps.png" class="login-section">
             </section>
           </section>
-          <section style="display: inline-block;">
+          <section class="display-section">
             <section class="buttons-main-page-section">
               <button class="buttons-main-page">Login</button>
               <button class="buttons-main-page"> Sign Up</button>
             </section>
           </section>
-        </header>
-</body>
-</html>
+ </header>
