--- a/HTML/views/vacant-view-job-seeker.html
+++ b/HTML/views/vacant-view-job-seeker.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="/CSS/job-seeker-list-style.css">
     <link rel="stylesheet" href="/CSS/search-bar-style.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+    <link rel="stylesheet" href="/CSS/headers.css">
+    <link rel="stylesheet" href="/CSS/profiles-style.css">
+
 </head>
 <body>
     <div id="wrapper">
@@ -25,7 +28,7 @@
         <section id="main-subtitle" xlu-include-file="/HTML/templates/main-subtitle.html">
         </section>
 
-        <main id="job-listing-content" xlu-include-file="/HTML/templates/profile.html">
+        <main id="job-listing-content" xlu-include-file="/HTML/templates/profileVacant.html">
         </main>
 
         <footer id="footer" xlu-include-file="/HTML/templates/footer.html">
