Edit style files,templates,views and add vacancy profile view

--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -1,19 +1,15 @@
 <header id="job-seeker-header" >
   <section class="display-section">
     <section  class="display-section">
-      <img src="/images/asps.png" class="login-section">
+      <img src="/images/asps.png" class="login-section" alt="image">
     </section>
   </section>
-
     <section class="job-seeker-buttons-section">
       <section class="job-seeker-find-jobs-button-section">
         <button class="job-seeker-find-jobs-button" >Find a job</button>
       </section>
       <section class="section-button-job-seeker-button">
-        <img id="imgJobSeeker"><button class="job-seeker-profile-button">
-        <b class="color-name">Name</b>
-        <br>email@example.com</button>
-        </img>
+        <img src="" id="imgJobSeeker" alt="image"><button class="job-seeker-profile-button"><b class="color-name">Name</b><br>email@example.com</button></img>
       </section>
     </section>
   </section>
